Grace/tests/gibbs/errors/t002.grace
// ERROR = P1025
var count := o.5
